--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>SaveTreesNFT</title>
-    <meta name="description" content="Mint your Nerdy Coder Clone NFT" />
+    <meta name="description" content="SaveTreesNFT" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
